Fix SPIGOT-6084, and change some deprecated API uses.
Signed-off-by: 秋雨落 <i@rain.cx>